--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--<title>Java DB Sample Application</title>-->
 <title>Java DB Sample Application</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport"
