--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--<title>Java DB Sample Application</title>-->
-<title>Java DB Sample Application</title>
+<title>Narasa Kumar</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport"
 	content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body >
-	<div class = "leftHalf">
+<!--	<div class = "leftHalf">
 <img class = "newappIcon" src="images/newapp-icon.png" />
 				<h1>
 					Welcome to the <span class="blue">Java DB Web Starter</span> on Bluemix!
@@ -18,6 +18,21 @@
 				<p class = "description">Get started by reading our <a href = "https://www.ng.bluemix.net/docs/#starters/liberty/index.html#liberty">Java documentation</a> or use the Start Coding guide under your app in your dashboard.</p>
 	</div>
 	<div class = "rightHalf">
+-->
+
+<div class = "leftHalf">
+
+<div class='tips'>
+						Enter URL and click Submit
+						<button class='addBtn' onclick="sayHello()" title='Say Hello'>
+							<img src='images/add.png' alt='sayHello' />
+						</button>
+					</div>
+
+	</div>
+
+
+
 	<div class = "center">
 	<header>
 					<div class='title'>
