--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,12 +22,20 @@
 
 <div class = "leftHalf">
 
+<table>
+<th>Enter URL and click Submit</th>
+<tr>
 
-						Enter URL and click Submit
-						<button class='addBtn' onclick="sayHello()" title='Say Hello'>
+<td>
+<button class='addBtn' onclick="sayHello()" title='Say Hello'>
 							<img src='images/add.png' alt='sayHello' />
 						</button>
-					</div>
+</td>
+</tr>
+
+</table>
+
+</div>
 
 <div class = "rightHalf">
 
