--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,8 +21,8 @@
 -->
 
 <div class = "leftHalf">
+<div class="center"
 
-<table>
 <th>Enter URL and click Submit</th>
 <tr>
 
@@ -34,6 +34,7 @@
 </tr>
 
 </table>
+</div>
 
 </div>
 
