--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,17 +23,15 @@
 <div class = "leftHalf">
 <div class="center">
 
-<th>Enter URL and click Submit</th>
-<tr>
+Enter URL and click Submit
+<&nbsp;>
+<&nbsp;>
+<&nbsp;>
 
-<td>
 <button class='addBtn' onclick="sayHello()" title='Say Hello'>
 							<img src='images/add.png' alt='sayHello' />
 						</button>
-</td>
-</tr>
 
-</table>
 </div>
 
 </div>
