--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,7 +28,7 @@ Enter URL and click Submit
 <&nbsp;>
 <&nbsp;>
 
-<button class='addBtn' onclick="sayHello()" title='Say Hello'>
+<button onclick="sayHello()" title='Say Hello'>
 							<img src='images/add.png' alt='sayHello' />
 						</button>
 
