--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -119,6 +119,7 @@ Enter URL and click Submit
 					
 					<script
 					type="text/javascript" src="qrCodeHouse.js"></script>
+					<script type="text/javascript" src="qrcode.js"></script>
 					
 					</div>
 </div>
