--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -114,12 +114,15 @@ Enter URL and click Submit
 							<img src='images/add.png' alt='add' />
 						</button>
 					</div>
-				</footer> <script type="text/javascript" src="util.js"></script> <script
-					type="text/javascript" src="index.js"></script>
+				</footer> <script 
+				type="text/javascript" src="util.js"></script> 
+				<script 
+				type="text/javascript" src="index.js"></script>
 					
-					<script
+					<script	
 					type="text/javascript" src="qrCodeHouse.js"></script>
-					<script type="text/javascript" src="qrcode.js"></script>
+					<script 
+					type="text/javascript" src="qrcode.js"></script>
 					
 					</div>
 </div>
