--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -114,6 +114,12 @@ Enter URL and click Submit
 							<img src='images/add.png' alt='add' />
 						</button>
 					</div>
+					
+					<hr><hr><hr>
+					
+					<div>
+						<a href = "/QRCodeHouse.html">QR Code House</a>
+					</div>
 				</footer> <script 
 				type="text/javascript" src="util.js"></script> 
 				<script 
