--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,13 +24,13 @@
 <div class = "leftHalf">
 <div class="center">
 
-<div id="QRCode" align="center" style="background-color: #551a8b; padding-bottom: 100px; padding-top: 100px">
+<div id="QRCode" class="QRCode">
 	<input type="text" name="input_string" id="input_string_id" placeholder="Enter String to Generate QR Code">
 	<input type="button" value="Generate" onclick="generateQR()" name="go" id="go_id">
 	<br>
-	</div>
-	<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
 
+	<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
+	</div>
 </div>
 
 </div>
