--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,9 +28,9 @@
 	<input type="text" name="input_string" id="input_string_id" placeholder="Enter String to Generate QR Code">
 	<input type="button" value="Generate" onclick="generateQR()" name="go" id="go_id">
 	<br>
-
-	<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
-	</div>
+</div>
+	<div id="qrcode" class="QRCodeElement"></div>
+	
 </div>
 
 </div>
