--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,6 +48,8 @@
 							<img src='images/detail.png' alt='detail' />
 						</button>
 						 -->
+						 <input type="button" value="Clear All" onclick="deleteItemAll()" name="ClearAll" id="Clear">
+
 					</div>
 				</header>
 				
