--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
 	<!--
 	<input type="button" value="Generate" onclick="generateQR()" name="go" id="go_id">-->
 	
-	 <button class='addBtn' onclick="generateQR()" title='Generate'>
+	 <button onclick="generateQR()" title='Generate'>
 							<img src='images/generateButton.png' alt='Generate' />
 	</button>
 	
@@ -56,7 +56,7 @@
 						</button>
 						 -->
 						 
-						 <button class='addBtn' onclick="deleteItemAll()" title='Clear All'>
+						 <button  onclick="deleteItemAll()" title='Clear All'>
 							<img src='images/ClearAll.png' alt='Clear All' />
 						</button>
 						 
